// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify ignored prefixes should ignore a prefix that matches nothing 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [nonexistent]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignored prefixes should leave a check alone when the prefix names another subtree 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [meshes/ogf]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignored prefixes should narrow a check to the unignored part of a subtree 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 6/6 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/6 LTX files formatted; 0/27 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 6 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs/misc]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 6 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 6 files, 27 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignored prefixes should narrow the LTX check when only system.ltx is ignored 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 6/6 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/6 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 6 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs/system.ltx]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 6 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 6 files, 32 sections in <duration>",
    "Verified 0.00%, 6 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignored prefixes should write nothing 1`] = `[]`;
